--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 ### Java template
 # Compiled class file
 *.class
+.classpath
+.project
+.settings/
+.vscode/
+.sts4-cache/
+.attach_pid*
+target/
+dependency-reduced-pom.xml
 
 # Log file
 *.log
@@ -23,5 +31,3 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-decode/target
-encode/target
