--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -6,6 +6,12 @@
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
+	<parent>
+		<groupId>projectriff.sample.java_run_length_encoding</groupId>
+		<artifactId>parent</artifactId>
+		<version>1.0.0</version>
+	</parent>
+
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
